# duho

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASENOTES.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  test.yml
benchmarks/: _bench.py  baseline.json  bench_discovery.py  bench_parsing.py  bench_startup.py  check_baseline.py  compare_cache.py  run.py  update_baseline.py
docs/: index.md
docs/api/: args.md  completion.md  discovery.md  formatters.md  logging.md  presets.md  reference.md
docs/guide/: arguments.md  completion.md  config.md  logging.md  plugins.md  running.md  runpath.md  types.md
examples/: buildutils.py  discovery_app.py  discovery_app.toml  dotagents.py  fileinstall.py  mcp_app.py  runpath_app.py
examples/discovery_cmds/: greet.py  status.py  whoami.py
examples/rc/: 01-check.py  20-provision.py  30-optional-report;!strict.py  __main__.py
src/duho/: AGENTS.md  __init__.py  _compat.py  _introspect.py  agenthelp.py  args.py  completion.py  discovery.py  env.py  fanout.py  formatters.py  logging.py  mcp.py  parsers.py  presets.py  qualname.py  runpath.py  runtime.py  scaffold.py  text.py
src/duho/cli/: args.py  utils.py
tests/: test_agenthelp.py  test_args.py  test_async.py  test_cli.py  test_cmd.py  test_collections.py  test_completion.py  test_completion_positionals.py  test_completion_powershell.py  test_config.py  test_config_json.py  test_dict_fields.py  test_discovery.py  test_e2e.py  test_entry_points.py  test_env.py  test_error_messages.py  test_examples.py  test_fanout.py  test_features.py  test_fix_phase_a.py  test_fix_phase_b.py  test_fix_phase_c.py  test_fix_phase_d_completion.py  test_fix_phase_d_env.py  test_fix_phase_d_misc.py  test_fix_phase_d_parsers.py  test_fix_phase_d_runpath_fanout.py  test_formatters.py  test_groups.py  test_integration.py  test_introspect.py  test_introspect_fallback.py  test_logging.py  test_logging_color.py  test_mcp_call.py  test_mcp_schema.py  test_mcp_server.py  test_mcp_tools.py  test_meta.py  (+14 more)
