[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duho"
version = "0.1.0"
authors = [{ name = "Jose A." }]
description = "A declarative CLI framework for building command-line applications with minimal boilerplate"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
dependencies = []

[project.optional-dependencies]
colorama = ["colorama"]
dev = ["build", "pytest", "pytest-cov"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/jose-pr/duho/"
Documentation = "https://jose-pr.github.io/duho/"
Issues = "https://github.com/jose-pr/duho/issues"
Repository = "https://github.com/jose-pr/duho"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/benchmarks"]

[tool.hatch.build.targets.wheel]
packages = ["src/duho"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
