[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duho"
version = "0.3.3"
authors = [{ name = "Jose A." }]
description = "A declarative CLI framework for building command-line applications with minimal boilerplate"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
colorama = ["colorama"]
config = ["tomli; python_version < '3.11'"]
dev = ["build", "hatchling", "hypothesis", "pytest", "pytest-cov", "twine"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/jose-pr/duho/"
Documentation = "https://jose-pr.github.io/duho/"
Issues = "https://github.com/jose-pr/duho/issues"
Repository = "https://github.com/jose-pr/duho"


# Ship the consumer-facing docs inside the installed package, so they are
# readable from site-packages via importlib.resources without the repo.
# src/duho/AGENTS.md is included automatically by living in the package
# dir; the repo-root AGENTS.md is development-only and deliberately not
# shipped.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "duho/README.md"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/benchmarks"]

[tool.hatch.build.targets.wheel]
packages = ["src/duho"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
